<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.taifook.mtss.mss-e.integration</groupId>
    <artifactId>manualOperation</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Manual Operation</name>
    <packaging>jar</packaging>
    <description>Manual Operation</description>

    <!--
        #####################################################
        ## Build properties
        #####################################################
    -->
    <properties>
        <target.dir>target</target.dir>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.oracle</groupId>
            <artifactId>ojdbc14</artifactId>
            <version>10.2.0.2.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>3.0.5.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.3</version>
        </dependency>

        <dependency>
            <groupId>com.taifook.mmns.mmns-client</groupId>
            <artifactId>mmns-client-main</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.taifook.mmns.mmns-client</groupId>
            <artifactId>mmns-client-serveradapter-axis13</artifactId>
            <version>2.0.0</version>
        </dependency>

        <dependency>
            <groupId>aopalliance</groupId>
            <artifactId>aopalliance</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>com.taifook.mtss.mtss-fw</groupId>
            <artifactId>mtss-fw-core</artifactId>
            <version>2.0-BETA7</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.4.3</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.4.3</version>
        </dependency>
    </dependencies>

    <build>
        <outputDirectory>${target.dir}/classes</outputDirectory>
        <testOutputDirectory>${target.dir}/test-classes</testOutputDirectory>
        <directory>${target.dir}</directory>

        <resources>
            <!--
                ####################################################
                ## Main application resources
                ####################################################
            -->
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>build-info.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>build-info.properties</exclude>
                </excludes>
            </resource>
            <!--
                ####################################################
                ## Main application external config
                ####################################################
            -->
            <resource>
                <directory>${basedir}/src/main/extconf</directory>
                <targetPath>extconf</targetPath>
            </resource>

        </resources>



        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.2</version>
                <configuration>
                    <argLine>-Xms512m -Xmx1024m -Xss256k -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</argLine>
                    <excludes>
                        <exclude>${mss.oracleTestExclusion}</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>com.taifook.mtss.mss.integration.egioginstrexport.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <!--
        #####################################################
        ## Profiles
        #####################################################
    -->
    <profiles>
        <profile>
            <id>default-tools.jar</id>
            <activation>
                <property>
                    <name>java.vendor</name>
                    <value>Sun Microsystems Inc.</value>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.sun</groupId>
                    <artifactId>tools</artifactId>
                    <version>1.5.0</version>
                    <scope>system</scope>
                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>eclipse-target-folder</id>
            <properties>
                <target.dir>target-eclipse</target.dir>
            </properties>
        </profile>
    </profiles>
</project>
